<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000"
    android:orientation="vertical"
    android:id="@+id/activity_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.douglas.contatos.Cadastro">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <ImageView
            android:layout_height="80dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView3"
            android:layout_width="100dp" />

        <Button
            android:text="@string/app_alterarimagem"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="#000"
            android:textColor="#046fa4"
            android:id="@+id/button6"
            android:layout_below="@+id/button5"
            android:layout_alignLeft="@+id/button5"
            android:layout_alignStart="@+id/button5"
            android:textStyle="bold|italic" />

        <Button
            android:text="@string/app_removerimagem"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="#000"
            android:textColor="#046fa4"
            android:id="@+id/button5"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView3"
            android:layout_toEndOf="@+id/imageView3"
            android:textStyle="normal|bold|italic" />

    </RelativeLayout>

    <TextView
        android:text="@string/app_nomecompleto"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:background="#FFF"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/campoNome" />

    <TextView
        android:text="@string/app_email"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:background="#FFF"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/campoEmailCadastro" />

    <TextView
        android:text="@string/app_senha"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:background="#FFF"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/campoSenhaCadastro" />

    <TextView
        android:text="@string/app_confirmarsenha"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6" />

    <EditText
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="35dp"
        android:layout_marginBottom="15dp"
        android:background="#FFF"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/campoConfirmSenha" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/app_cadastrar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCadastrar"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/app_possuoconta"
            android:background="#000"
            android:onClick="startLogin"
            android:textColor="#046fa4"
            android:layout_height="30dp"
            android:id="@+id/button4"
            android:layout_width="160dp"
            android:layout_below="@+id/btnCadastrar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp" />
    </RelativeLayout>

</LinearLayout>
