<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hello_world"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.douglas.contatos.Login"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView"
        android:layout_weight="0.00" />

    <TextView
        android:text="@string/app_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:textSize="25dp"
        android:id="@+id/textView"
        android:layout_weight="0.00" />

    <EditText
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="#FFF"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/campoLogin" />

    <TextView
        android:text="@string/app_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:textSize="25dp"
        android:id="@+id/textView2"
        android:layout_weight="0.00" />

    <EditText
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="40dp"
        android:background="#FFF"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/campoSenha" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.28">

        <Button
            android:text="@string/app_entrar"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnEntrar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.26">

        <Button
            android:onClick="startCadastro"
            android:text="@string/app_cadastrar"
            android:background="#000"
            android:layout_width="124dp"
            android:layout_height="26dp"
            android:textColor="#046fa4"
            android:id="@+id/btn_cadastrar"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/app_esquecer_senha"
            android:background="#000"
            android:layout_width="188dp"
            android:layout_height="20dp"
            android:textColor="#046fa4"
            android:id="@+id/btn_esqueceusenha"
            android:layout_below="@+id/btn_cadastrar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp" />
    </RelativeLayout>

</LinearLayout>
